--- a/.github/workflows/github-profile-3d.yml
+++ b/.github/workflows/github-profile-3d.yml
@@ -7,6 +7,9 @@ on:
   schedule: # 03:00 JST == 18:00 UTC
     - cron: "0 18 * * *"
   workflow_dispatch:
+  
+permissions:
+  contents: write 
 
 jobs:
   build:
